# sport-system-backend

./: .gitignore  README.md  VKU_REGISTRY_SPORTS_BASE_UTF-8.csv  VRVS_441b8cea69.xls  examination.puml  examinations.puml  pyproject.toml  testing_sportsmans.puml
Np23074/: C003-2.1.6-24072023_1844.xml  C004-3.5.9-24072023_1844.xml  C005-1.1.6-24072023_1845.xml  C006-1.1.2-24072023_1844.xml  C007-1.1.2-24072023_1844.xml  C009-1.3.4-24072023_1844.xml  C010-2.0.4-24072023_1845.xml  C011-1.0.5-24072023_1844.xml  D002-1.1.2-24072023_1844.xml  D004-2.1.2-24072023_1844.xml  D005-2.1.2-24072023_1845.xml  D006-2.1.2-24072023_1845.xml  D007-2.1.3-24072023_1845.xml  D009-1.1.2-24072023_1845.xml  E001-2.1.3-24072023_1845.xml  E003-1.0.2-24072023_1844.xml  E005-1.0.3-24072023_1844.xml  F001-1.1.2-24072023_1845.xml  F002-3.1.5-24072023_1845.xml  F003-1.1.2-24072023_1845.xml  N002-2.2.6-24072023_1845.xml  O003-1.0.2-24072023_1844.xml  O004-2.1.3-24072023_1845.xml  O006-2.1.3-24072023_1845.xml  P004-2.1.3-24072023_1845.xml  P006-1.1.2-24072023_1844.xml  P007-1.1.2-24072023_1844.xml  P008-2.1.2-24072023_1844.xml  P011-1.1.2-24072023_1844.xml  S002-1.1.2-24072023_1844.xml  T001-2.1.4-24072023_1845.xml  T002-3.3.15-24072023_1845.xml  T003-1.1.2-24072023_1845.xml  T005-1.1.2-24072023_1845.xml
backend/apps/competitions/: __init__.py  admin.py  apps.py
backend/apps/educations_groups/: apps.py
backend/apps/ekp/: __init__.py  apps.py
backend/fixtures/: Perechen_Yu_L_2024_588ca6de3e.xlsx  VRVS_441b8cea69.xls  testing.json
backend/src/: urls.py
fixtures/: testing.json
(+423 files in other folders)
